--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ script: "rm -rf deps ebin test/*.beam logs && ./rebar get-deps compile && ./reba
 branches:
   only:
     - master
+    - ipv6_v6only_check
+    - tool_options
 
 notifications:
   email:
-    - mononcqc@ferd.ca
+    - example@example.ca
